--- a/04-svg/foreignObject.html
+++ b/04-svg/foreignObject.html
@@ -1,22 +1,29 @@
-<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <foreignObject x="20" y="20" width="160" height="160">
+<!DOCTYPE html>
+<html lang="en">
 
-    <html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, 
+         initial-scale=1.0">
+</head>
 
-    <head>
-      <style>
-        div {
-          width: 200px;
-          border: 2px solid #000;
-        }
-      </style>
-    </head>
+<body>
+  <svg viewBox="500 500">
+    <style>
+      div {
+        color: green;
+        height: 100%;
+        background: #000;
+        text-align: center;
+        line-height: 60px;
+      }
+    </style>
+    <foreignObject x="100" y="25" width="100" height="60">
+      <div>
+        hello world
+      </div>
+    </foreignObject>
+  </svg>
+</body>
 
-    <body>
-      <div>hello world</div>
-    </body>
-
-    </html>
-
-  </foreignObject>
-</svg>
+</html>
