--- a/03/3d-cube.html
+++ b/03/3d-cube.html
@@ -1,34 +1,70 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <style>
-    div.wrap {
+    .container {
       width: 200px;
-      perspective: 400px;
-      /*景深*/
       position: absolute;
       left: 50%;
       top: 50%;
       transform: translateX(-50%) translateY(-50%);
-      /*利用位移来处理垂直水平居中*/
+      perspective: 300px;
     }
 
-    .wrap>div.cube {
-      width: 200px;
-      height: 200px;
+    .container>.cube {
       position: relative;
       transform-style: preserve-3d;
+      width: 200px;
+      height: 200px;
       transform: rotateX(-50deg) rotateY(-50deg) rotateZ(0deg);
-      /*旋转*/
       animation: move 8s infinite linear;
-      /*动画*/
     }
 
-    /*关键帧*/
+    .cube>div {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      color: #fff;
+      font-size: 40px;
+      line-height: 200px;
+      text-align: center;
+      background: #000;
+    }
+
+    .cube>div.front {
+      background: deeppink;
+      transform: translateZ(100px);
+    }
+
+    .cube>div.back {
+      background: seagreen;
+      transform: translateZ(-100px) rotateY(180deg);
+    }
+
+    .cube>div.left {
+      background: skyblue;
+      transform: translateX(-100px) rotateY(-90deg);
+    }
+
+    .cube>div.right {
+      background: lightcoral;
+      transform: translateX(100px) rotateY(90deg);
+    }
+
+    .cube>div.top {
+      background: mediumseagreen;
+      transform: translateY(-100px) rotateX(90deg);
+    }
+
+    .cube>div.bottom {
+      background: dodgerblue;
+      transform: translateY(100px) rotateX(-90deg);
+    }
+
     @keyframes move {
       0% {
         transform: rotateX(0deg) rotateY(0deg);
@@ -38,68 +74,18 @@
         transform: rotateX(360deg) rotateY(360deg);
       }
     }
-
-    .cube>div {
-      width: 100%;
-      height: 100%;
-      /* border-radius: 20px; */
-      position: absolute;
-      background: #000;
-      box-shadow: 0 0 10px currentColor;
-      /*currentColor关键字的使用值是 color 属性值的计算值*/
-      transition: background 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
-      /*过渡 属性 时间 过渡曲线*/
-    }
-
-    .cube:hover>div {
-      background: currentColor;
-      box-shadow: 0 0 20px currentColor;
-    }
-
-    .cube div.out-front {
-      color: deeppink;
-      transform: translateZ(100px);
-      /*转换  位移*/
-    }
-
-    .cube div.out-back {
-      color: seagreen;
-      transform: translateZ(-100px) rotateY(180deg);
-      /*转换 位移 旋转*/
-    }
-
-    .cube div.out-left {
-      color: skyblue;
-      transform: translateX(-100px) rotateY(-90deg);
-    }
-
-    .cube div.out-right {
-      color: lightcoral;
-      transform: translateX(100px) rotateY(90deg);
-    }
-
-    .cube div.out-top {
-      color: mediumseagreen;
-      transform: translateY(-100px) rotateX(90deg);
-    }
-
-    .cube div.out-bottom {
-      color: dodgerblue;
-      transform: translateY(100px) rotateX(-90deg);
-    }
   </style>
 </head>
 
 <body>
-  </div>
-  <div class="wrap">
+  <div class="container">
     <div class="cube">
-      <div class="out-front"></div>
-      <div class="out-back"></div>
-      <div class="out-left"></div>
-      <div class="out-right"></div>
-      <div class="out-top"></div>
-      <div class="out-bottom"></div>
+      <div class="front">前</div>
+      <div class="back">后</div>
+      <div class="left">左</div>
+      <div class="right">右</div>
+      <div class="top">上</div>
+      <div class="bottom">下</div>
     </div>
   </div>
 </body>
