--- a/12/threejs-demo.html
+++ b/12/threejs-demo.html
@@ -16,52 +16,86 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js"></script>
   <script>
-    /**
-      * 创建场景对象Scene
-      */
-    const scene = new THREE.Scene()
-    /**
-     * 创建网格模型
-     */
-    const geometry = new THREE.BoxGeometry(50, 50, 50)
-    let colorArr = []
-    colorArr.push(new THREE.MeshBasicMaterial({ color: 'deeppink' }))
-    colorArr.push(new THREE.MeshBasicMaterial({ color: 'seagreen' }))
-    colorArr.push(new THREE.MeshBasicMaterial({ color: 'skyblue' }))
-    colorArr.push(new THREE.MeshBasicMaterial({ color: 'lightcoral' }))
-    colorArr.push(new THREE.MeshBasicMaterial({ color: 'mediumseagreen' }))
-    colorArr.push(new THREE.MeshBasicMaterial({ color: 'dodgerblue' }))
-    const mesh = new THREE.Mesh(geometry, colorArr)
-    scene.add(mesh)
+    javascript: (function () { var script = document.createElement('script'); script.onload = function () { var stats = new Stats(); document.body.appendChild(stats.dom); requestAnimationFrame(function loop() { stats.update(); requestAnimationFrame(loop) }); }; script.src = '//mrdoob.github.io/stats.js/build/stats.min.js'; document.head.appendChild(script); })()
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+  <script>
+
+
+    let camera, scene, renderer
+    let mesh
+
+    const options = new function () {
+      this.title = 'dat.GUI'
+      this.speed = 0.01
+    }
+
+    gui()
+    init()
+    animate()
 
 
 
 
-    /**
-      * 相机设置
-      */
-    const width = window.innerWidth //窗口宽度
-    const height = window.innerHeight //窗口高度
-    const k = width / height //窗口宽高比
-    const s = 200 //三维场景显示范围控制系数，系数越大，显示的范围越大
-    //创建相机对象
-    const camera = new THREE.OrthographicCamera(-s * k, s * k, s, -s, 1, 1000)
-    camera.position.set(200, 300, 200) //设置相机位置
-    camera.lookAt(scene.position) //设置相机方向(指向的场景对象)
+    function gui() {
+      const gui = new dat.GUI()
+
+      gui.add(options, 'title')
+      gui.add(options, 'speed', 0, 1)
+    }
+
+    function init() {
+      // 创建 Scene
+      scene = new THREE.Scene()
+
+      const geometry = new THREE.BoxGeometry(50, 50, 50)
+
+      let colorArr = []
+      colorArr.push(new THREE.MeshBasicMaterial({ color: 'deeppink' }))
+      colorArr.push(new THREE.MeshBasicMaterial({ color: 'seagreen' }))
+      colorArr.push(new THREE.MeshBasicMaterial({ color: 'skyblue' }))
+      colorArr.push(new THREE.MeshBasicMaterial({ color: 'lightcoral' }))
+      colorArr.push(new THREE.MeshBasicMaterial({ color: 'mediumseagreen' }))
+      colorArr.push(new THREE.MeshBasicMaterial({ color: 'dodgerblue' }))
+      mesh = new THREE.Mesh(geometry, colorArr)
+      scene.add(mesh)
+
+
+      const width = window.innerWidth
+      const height = window.innerHeight
+      const k = width / height
+      const s = 200
+
+      camera = new THREE.OrthographicCamera(-s * k, s * k, s, -s, 1, 1000)
+      camera.position.set(200, 300, 200)
+      camera.lookAt(scene.position)
+
+      renderer = new THREE.WebGLRenderer()
+      renderer.setSize(width, height)
+      renderer.setClearColor(0x999999, 1)
+      document.body.appendChild(renderer.domElement)
+    }
+
+    function animate() {
+
+      mesh.rotateY(0.01 + options.speed)
+
+      renderer.render(scene, camera)
+
+      requestAnimationFrame(animate)
+
+    }
 
 
 
 
-    /**
-     * 光源设置
-     */
-    //点光源
-    // var point = new THREE.PointLight(0xffffff);
-    // point.position.set(400, 200, 300); //点光源位置
-    // scene.add(point); //点光源添加到场景中
-    // //环境光
-    // var ambient = new THREE.AmbientLight(0x444444);
-    // scene.add(ambient);
+
+
+
+
+
+
+
 
 
 
@@ -69,11 +103,7 @@
     /**
      * 创建渲染器对象
      */
-    const renderer = new THREE.WebGLRenderer()
-    renderer.setSize(width, height) //设置渲染区域尺寸
-    renderer.setClearColor(0x999999, 1) //设置背景颜色及透明度
-    document.body.appendChild(renderer.domElement)  //body元素中插入canvas对象
-    renderer.render(scene, camera)
+
     //执行渲染操作   指定场景、相机作为参数
     // const render = function () {
     //   renderer.render(scene, camera);
