--- a/14/d3-demo.html
+++ b/14/d3-demo.html
@@ -40,7 +40,7 @@
 
     // 坐标轴
     let xAxis = d3.axisBottom(xScale)
-    let yAxis = d3.axisRight(yScale)
+    let yAxis = d3.axisLeft(yScale)
 
     // 添加x坐标轴
     svg.append('g')
